# startrails

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  stacker.py  taskqueue.py  util.py
data/512/: 0-0.json  1-0.json  1-1.json  1-2.json  1-3.json  10-0.json  100-0.json  100-1.json  101-0.json  102-0.json  103-0.json  103-1.json  103-2.json  103-3.json  103-4.json  103-5.json  103-6.json  104-0.json  104-1.json  105-0.json  106-0.json  107-0.json  107-1.json  108-0.json  108-1.json  108-2.json  109-0.json  11-0.json  11-1.json  11-2.json  11-3.json  11-4.json  110-0.json  110-1.json  110-2.json  110-3.json  111-0.json  111-1.json  111-2.json  111-3.json  (+747 more)
models/detectStreaks/streaks_openvino_model/: metadata.yaml  streaks.xml
projects/: default_project.json
src/: main.py
src/setup/: probeGPU.py  setup.ps1
src/startrails/: app.py  requirements.txt
src/startrails/lib/: file.py  gpu.py  util.py
src/startrails/lib/op/: stackImages.py
src/startrails/op/: detectStreaks.py  exportMaskedImages.py  exportStreaksTraining.py  fillGaps.py  findBrightFrame.py  stackImages.py
src/startrails/ui/: app.py  canvasLabel.py  dialog_detectStreaks.py  dialog_stackImages.py  file.py  filestrip.py  icons.qrc  icons_darktheme_rc.py  icons_rc.py  interface.ui  progress.py  project.py  signals.py  ui_dialog_stack.py  ui_dialog_stack.ui  ui_dialog_streaks.py  ui_dialog_streaks.ui  ui_interface.py  ui_wrap.py
training/: Finetune Yolo.ipynb  Generate Cropped Dataset.ipynb  streaks-512.yaml
(+2 files in other folders)
