[project]
name = "startrails"
version = "0.1.0"
description = "startrails"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "deferred-import>=0.1.0",
    "gputil==1.4.0",
    "jsonpickle==4.0.1",
    "numpy",
    "opencv-python-headless>=4.11",
    "openvino",
    "pillow",
    "psutil==6.1.1",
    "pyside6==6.8.2",
    "sahi==0.11.20",
    "scikit-image>=0.25.2",
    "shapely==2.0.7",
    "tqdm",
    "ultralytics==8.3.79",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
]
cu118 = [
  "torch>=2.6.0",
  "cupy-cuda11x==13.3.0",
]
cu124 = [
  "torch>=2.6.0",
  "cupy-cuda12x==13.3.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
